# adaptive-agent-orchestrator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
orchestrator/: __init__.py  adaptive_orchestrator.py
orchestrator/core/: __init__.py  resources.py  session_types.py
orchestrator/core/curation/: __init__.py  agent_curation.py  blueprint_curation.py  episode_storage.py  pipeline.py  types.py
orchestrator/core/execution/: __init__.py  graph.py  loop.py  plan_detector.py  plan_store.py  planner.py
orchestrator/core/execution/tools/: __init__.py  build.py  completion.py  context.py  delegation.py  planning.py
orchestrator/core/retrieval/: card_scoring.py  retrieve_context.py  search_agents.py  search_blueprints.py
orchestrator/instrumentation/: __init__.py  episode_summary.py  metrics.py  playbook_evolution.py  recorder.py  trajectory.py
orchestrator/memory/: __init__.py  base_store.py  factory.py  pg_helpers.py  records.py
orchestrator/memory/setup/: __init__.py  __main__.py  schema.sql  schema_manager.py
orchestrator/memory/stores/: __init__.py  blueprint_store.py  episode_store.py  playbook_store.py  trajectory_store.py
orchestrator/prompts/: __init__.py  agent_curator.py  episode_curator.py  executor.py  plan_detector.py  planner.py  playbook_consolidation.py  profiler.py  verification_gate.py
orchestrator/registration/: __init__.py  card.py  client.py  profiler.py  registry.py
orchestrator/shared/: __init__.py  constants.py  embedder.py
